--- a/python_setuptools/{{cookiecutter.project_slug}}/.gitignore
+++ b/python_setuptools/{{cookiecutter.project_slug}}/.gitignore
@@ -104,3 +104,14 @@ ENV/
 # IDE settings
 .vscode/
 .idea/
+
+# ignore everything in the following folders
+data/**
+logs/**
+
+# except their sub-folders
+!data/**/
+!logs/**/
+
+# also keep all .gitkeep files
+!.gitkeep
