--- a/cookiecutters/python_setuptools/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/cookiecutters/python_setuptools/{{cookiecutter.repo_name}}/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = []
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["black", "coverage"]
+dev = ["black", "coverage", "test"]
 
 [project.scripts]
 
