--- a/cookiecutters/python_setuptools/{{cookiecutter.repo_name}}/Makefile
+++ b/cookiecutters/python_setuptools/{{cookiecutter.repo_name}}/Makefile
@@ -1,7 +1,7 @@
 .PHONY: help clean clean-build clean-pyc clean-test check-format test coverage dist install 
 .DEFAULT_GOAL := help
 
-help: ## Display this help screen
+help: ## display this help screen
 	@grep -E '^[a-z.A-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
 clean: clean-build clean-pyc clean-test ## remove all build, test, coverage and Python artifacts
@@ -26,6 +26,9 @@ clean-test: ## remove test and coverage artifacts
 check-format: ## check style with black
 	black --check src
 
+format: ## check style with black
+	black src
+
 test: ## run tests quickly with the default Python
 	python -m pytest src/{{ cookiecutter.project_slug }}/tests
 
@@ -40,4 +43,7 @@ dist: clean ## builds source and wheel package
 	ls -l dist
 
 install: clean ## install the package to the active Python's site-packages
-	pip install --editable .
+	pip install .
+
+install-dev: clean ## install the package to the active Python's site-packages
+	pip install .[dev]
