--- a/cookiecutters/python_setuptools/{{cookiecutter.package_name}}/pyproject.toml
+++ b/cookiecutters/python_setuptools/{{cookiecutter.package_name}}/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "{{ cookiecutter.project_slug }}"
+name = "{{ cookiecutter.package_name }}"
 license = {file = "LICENSE"}
 description = "{{ cookiecutter.project_short_description }}"
 readme = "README.md"
@@ -15,7 +15,7 @@ dev = ["black", "coverage", "test"]
 {% if cookiecutter.black_line_length != "default" %}line-length = {{ cookiecutter.black_line_length }} {%- endif %}
 
 [tool.setuptools.dynamic]
-version = {attr = "{{ cookiecutter.project_slug }}.__version__"}
+version = {attr = "{{ cookiecutter.package_name }}.__version__"}
 
 [build-system]
 requires = ["setuptools"]
